# pii-redactor

./: .gitignore  INTEGRATION.md  LICENSE  README.md  pyproject.toml
gateway-hook/: pii-redactor-hook.ts
plugin/: README.md  index.ts  openclaw.plugin.json  package.json
src/pii_redactor/: __init__.py  __main__.py  cli.py  config.py  middleware.py  patterns.py  presidio_layer.py  redactor.py  server.py  streaming.py  types.py  vault.py  vault_sqlite.py
tests/: test_redactor.py
