[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pii-redactor"
version = "0.1.0"
description = "Fast, layered PII redaction for LLM pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
presidio = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.6",
]
all = ["pii-redactor[presidio]"]
dev = [
    "pii-redactor[all]",
    "pytest>=7.0",
    "pytest-benchmark",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pii_redactor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
